cabal-version: 3.8

name: komatsu
version: 0.1.0.0

common common
  build-depends:
    , base >= 4.18.0 && < 4.19
  default-language: GHC2021
  ghc-options:
    -Wall

library
  import: common
  hs-source-dirs: src
  exposed-modules:
    Komatsu
  other-modules:
    Paths_komatsu
  autogen-modules:
    Paths_komatsu

executable komatsu
  import: common
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    , komatsu

test-suite komatsu-test
  import: common
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    , komatsu
